scouting-frontend/devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: scouting-vue
  name: scouting-vue
  namespace: spyderweb
spec:
  selector:
    matchLabels:
      component: scouting-vue
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 2
  template:
    metadata:
      labels:
        component: scouting-vue
    spec:
      imagePullSecrets:
        - name: frontend-registry-credentials
      containers:
        - image: registry.gitlab.com/frc1622/web/scouting-frontend:latest
          imagePullPolicy: Always
          name: scouting-vue-nginx
          ports:
            - containerPort: 8080
              name: web
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 4
              memory: 2048Mi
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8080
              httpHeaders:
                - name: Host
                  value: scouting.teamspyder.science
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /index.html
              port: 8080
              httpHeaders:
                - name: Host
                  value: scouting.teamspyder.science
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 50
      restartPolicy: Always
