scouting-frontend/devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scouting-vue
  namespace: spyderweb
  labels:
    component: scouting-vue
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    component: scouting-vue
